Proyecto/src/main/python/compiladoresParser.py
# Generated from /home/gabriel/BaseCompiladores/src/main/python/compiladores.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class compiladoresParser ( Parser ):

    grammarFileName = "compiladores.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'++'", "'--'", "'('", "')'", "'{'", "'}'", 
                     "';'", "','", "<INVALID>", "<INVALID>", "'while'", 
                     "'if'", "'for'", "'return'" ]

    symbolicNames = [ "<INVALID>", "EQ", "EQQ", "NE", "LT", "GT", "LE", 
                      "GE", "PP", "MM", "PA", "PC", "LLA", "LLC", "PYC", 
                      "COMA", "NUMERO", "TDATO", "WHILE", "IF", "FOR", "RETURN", 
                      "ID", "WS", "OTRO" ]

    RULE_programa = 0
    RULE_instrucciones = 1
    RULE_instruccion = 2
    RULE_declaracion = 3
    RULE_definicion = 4
    RULE_bloque = 5
    RULE_lista_var = 6
    RULE_asignacion = 7
    RULE_retornar = 8
    RULE_while_stmt = 9
    RULE_if_stmt = 10
    RULE_for_stmt = 11
    RULE_opal = 12
    RULE_loperators = 13

    ruleNames =  [ "programa", "instrucciones", "instruccion", "declaracion", 
                   "definicion", "bloque", "lista_var", "asignacion", "retornar", 
                   "while_stmt", "if_stmt", "for_stmt", "opal", "loperators" ]

    EOF = Token.EOF
    EQ=1
    EQQ=2
    NE=3
    LT=4
    GT=5
    LE=6
    GE=7
    PP=8
    MM=9
    PA=10
    PC=11
    LLA=12
    LLC=13
    PYC=14
    COMA=15
    NUMERO=16
    TDATO=17
    WHILE=18
    IF=19
    FOR=20
    RETURN=21
    ID=22
    WS=23
    OTRO=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrucciones(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionesContext,0)


        def EOF(self):
            return self.getToken(compiladoresParser.EOF, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = compiladoresParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.instrucciones()
            self.state = 29
            self.match(compiladoresParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionContext,0)


        def instrucciones(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionesContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_instrucciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucciones" ):
                listener.enterInstrucciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucciones" ):
                listener.exitInstrucciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstrucciones" ):
                return visitor.visitInstrucciones(self)
            else:
                return visitor.visitChildren(self)




    def instrucciones(self):

        localctx = compiladoresParser.InstruccionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instrucciones)
        try:
            self.state = 35
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [compiladoresParser.LLA, compiladoresParser.TDATO, compiladoresParser.WHILE, compiladoresParser.IF, compiladoresParser.FOR, compiladoresParser.RETURN, compiladoresParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.instruccion()
                self.state = 32
                self.instrucciones()
                pass
            elif token in [compiladoresParser.EOF, compiladoresParser.LLC]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(compiladoresParser.DeclaracionContext,0)


        def retornar(self):
            return self.getTypedRuleContext(compiladoresParser.RetornarContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(compiladoresParser.AsignacionContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(compiladoresParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(compiladoresParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(compiladoresParser.For_stmtContext,0)


        def bloque(self):
            return self.getTypedRuleContext(compiladoresParser.BloqueContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = compiladoresParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruccion)
        try:
            self.state = 44
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [compiladoresParser.TDATO]:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.declaracion()
                pass
            elif token in [compiladoresParser.RETURN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.retornar()
                pass
            elif token in [compiladoresParser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 39
                self.asignacion()
                pass
            elif token in [compiladoresParser.IF]:
                self.enterOuterAlt(localctx, 4)
                self.state = 40
                self.if_stmt()
                pass
            elif token in [compiladoresParser.WHILE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 41
                self.while_stmt()
                pass
            elif token in [compiladoresParser.FOR]:
                self.enterOuterAlt(localctx, 6)
                self.state = 42
                self.for_stmt()
                pass
            elif token in [compiladoresParser.LLA]:
                self.enterOuterAlt(localctx, 7)
                self.state = 43
                self.bloque()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TDATO(self):
            return self.getToken(compiladoresParser.TDATO, 0)

        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def definicion(self):
            return self.getTypedRuleContext(compiladoresParser.DefinicionContext,0)


        def lista_var(self):
            return self.getTypedRuleContext(compiladoresParser.Lista_varContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = compiladoresParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(compiladoresParser.TDATO)
            self.state = 47
            self.match(compiladoresParser.ID)
            self.state = 48
            self.definicion()
            self.state = 49
            self.lista_var()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(compiladoresParser.EQ, 0)

        def NUMERO(self):
            return self.getToken(compiladoresParser.NUMERO, 0)

        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_definicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinicion" ):
                listener.enterDefinicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinicion" ):
                listener.exitDefinicion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinicion" ):
                return visitor.visitDefinicion(self)
            else:
                return visitor.visitChildren(self)




    def definicion(self):

        localctx = compiladoresParser.DefinicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_definicion)
        try:
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.match(compiladoresParser.EQ)
                self.state = 52
                self.match(compiladoresParser.NUMERO)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.match(compiladoresParser.EQ)
                self.state = 54
                self.match(compiladoresParser.NUMERO)
                self.state = 55
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLA(self):
            return self.getToken(compiladoresParser.LLA, 0)

        def instrucciones(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionesContext,0)


        def LLC(self):
            return self.getToken(compiladoresParser.LLC, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = compiladoresParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(compiladoresParser.LLA)
            self.state = 60
            self.instrucciones()
            self.state = 61
            self.match(compiladoresParser.LLC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lista_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMA(self):
            return self.getToken(compiladoresParser.COMA, 0)

        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def definicion(self):
            return self.getTypedRuleContext(compiladoresParser.DefinicionContext,0)


        def lista_var(self):
            return self.getTypedRuleContext(compiladoresParser.Lista_varContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_lista_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista_var" ):
                listener.enterLista_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista_var" ):
                listener.exitLista_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLista_var" ):
                return visitor.visitLista_var(self)
            else:
                return visitor.visitChildren(self)




    def lista_var(self):

        localctx = compiladoresParser.Lista_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_lista_var)
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [compiladoresParser.COMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.match(compiladoresParser.COMA)
                self.state = 64
                self.match(compiladoresParser.ID)
                self.state = 65
                self.definicion()
                self.state = 66
                self.lista_var()
                pass
            elif token in [compiladoresParser.EOF, compiladoresParser.LLA, compiladoresParser.LLC, compiladoresParser.TDATO, compiladoresParser.WHILE, compiladoresParser.IF, compiladoresParser.FOR, compiladoresParser.RETURN, compiladoresParser.ID]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def definicion(self):
            return self.getTypedRuleContext(compiladoresParser.DefinicionContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = compiladoresParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(compiladoresParser.ID)
            self.state = 72
            self.definicion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RetornarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(compiladoresParser.RETURN, 0)

        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def NUMERO(self):
            return self.getToken(compiladoresParser.NUMERO, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_retornar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRetornar" ):
                listener.enterRetornar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRetornar" ):
                listener.exitRetornar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRetornar" ):
                return visitor.visitRetornar(self)
            else:
                return visitor.visitChildren(self)




    def retornar(self):

        localctx = compiladoresParser.RetornarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_retornar)
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.match(compiladoresParser.RETURN)
                self.state = 75
                self.match(compiladoresParser.ID)
                self.state = 76
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.match(compiladoresParser.RETURN)
                self.state = 78
                self.match(compiladoresParser.NUMERO)
                self.state = 79
                self.match(compiladoresParser.PYC)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(compiladoresParser.WHILE, 0)

        def PA(self):
            return self.getToken(compiladoresParser.PA, 0)

        def opal(self):
            return self.getTypedRuleContext(compiladoresParser.OpalContext,0)


        def PC(self):
            return self.getToken(compiladoresParser.PC, 0)

        def instruccion(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_while_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stmt" ):
                listener.enterWhile_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stmt" ):
                listener.exitWhile_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stmt" ):
                return visitor.visitWhile_stmt(self)
            else:
                return visitor.visitChildren(self)




    def while_stmt(self):

        localctx = compiladoresParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(compiladoresParser.WHILE)
            self.state = 83
            self.match(compiladoresParser.PA)
            self.state = 84
            self.opal()
            self.state = 85
            self.match(compiladoresParser.PC)
            self.state = 86
            self.instruccion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(compiladoresParser.IF, 0)

        def PA(self):
            return self.getToken(compiladoresParser.PA, 0)

        def opal(self):
            return self.getTypedRuleContext(compiladoresParser.OpalContext,0)


        def PC(self):
            return self.getToken(compiladoresParser.PC, 0)

        def instruccion(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stmt" ):
                return visitor.visitIf_stmt(self)
            else:
                return visitor.visitChildren(self)




    def if_stmt(self):

        localctx = compiladoresParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(compiladoresParser.IF)
            self.state = 89
            self.match(compiladoresParser.PA)
            self.state = 90
            self.opal()
            self.state = 91
            self.match(compiladoresParser.PC)
            self.state = 92
            self.instruccion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(compiladoresParser.FOR, 0)

        def PA(self):
            return self.getToken(compiladoresParser.PA, 0)

        def PYC(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.PYC)
            else:
                return self.getToken(compiladoresParser.PYC, i)

        def PC(self):
            return self.getToken(compiladoresParser.PC, 0)

        def instruccion(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionContext,0)


        def asignacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compiladoresParser.AsignacionContext)
            else:
                return self.getTypedRuleContext(compiladoresParser.AsignacionContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.ID)
            else:
                return self.getToken(compiladoresParser.ID, i)

        def opal(self):
            return self.getTypedRuleContext(compiladoresParser.OpalContext,0)


        def NUMERO(self):
            return self.getToken(compiladoresParser.NUMERO, 0)

        def PP(self):
            return self.getToken(compiladoresParser.PP, 0)

        def MM(self):
            return self.getToken(compiladoresParser.MM, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_for_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_stmt" ):
                listener.enterFor_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_stmt" ):
                listener.exitFor_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_stmt" ):
                return visitor.visitFor_stmt(self)
            else:
                return visitor.visitChildren(self)




    def for_stmt(self):

        localctx = compiladoresParser.For_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_for_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(compiladoresParser.FOR)
            self.state = 95
            self.match(compiladoresParser.PA)
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 96
                self.asignacion()
                pass

            elif la_ == 2:
                self.state = 97
                self.match(compiladoresParser.ID)
                pass


            self.state = 100
            self.match(compiladoresParser.PYC)
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 101
                self.match(compiladoresParser.ID)
                self.state = 102
                self.opal()
                self.state = 103
                self.match(compiladoresParser.ID)
                pass

            elif la_ == 2:
                self.state = 105
                self.match(compiladoresParser.ID)
                self.state = 106
                self.opal()
                self.state = 107
                self.match(compiladoresParser.NUMERO)
                pass


            self.state = 111
            self.match(compiladoresParser.PYC)
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 112
                self.match(compiladoresParser.ID)
                self.state = 113
                self.match(compiladoresParser.PP)
                pass

            elif la_ == 2:
                self.state = 114
                self.match(compiladoresParser.ID)
                self.state = 115
                self.match(compiladoresParser.MM)
                pass

            elif la_ == 3:
                self.state = 116
                self.asignacion()
                pass


            self.state = 119
            self.match(compiladoresParser.PC)
            self.state = 120
            self.instruccion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.ID)
            else:
                return self.getToken(compiladoresParser.ID, i)

        def loperators(self):
            return self.getTypedRuleContext(compiladoresParser.LoperatorsContext,0)


        def NUMERO(self):
            return self.getToken(compiladoresParser.NUMERO, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_opal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpal" ):
                listener.enterOpal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpal" ):
                listener.exitOpal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpal" ):
                return visitor.visitOpal(self)
            else:
                return visitor.visitChildren(self)




    def opal(self):

        localctx = compiladoresParser.OpalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_opal)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(compiladoresParser.ID)
                self.state = 123
                self.loperators()
                self.state = 124
                self.match(compiladoresParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(compiladoresParser.ID)
                self.state = 127
                self.loperators()
                self.state = 128
                self.match(compiladoresParser.NUMERO)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoperatorsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQQ(self):
            return self.getToken(compiladoresParser.EQQ, 0)

        def GE(self):
            return self.getToken(compiladoresParser.GE, 0)

        def GT(self):
            return self.getToken(compiladoresParser.GT, 0)

        def LE(self):
            return self.getToken(compiladoresParser.LE, 0)

        def LT(self):
            return self.getToken(compiladoresParser.LT, 0)

        def NE(self):
            return self.getToken(compiladoresParser.NE, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_loperators

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoperators" ):
                listener.enterLoperators(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoperators" ):
                listener.exitLoperators(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoperators" ):
                return visitor.visitLoperators(self)
            else:
                return visitor.visitChildren(self)




    def loperators(self):

        localctx = compiladoresParser.LoperatorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_loperators)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compiladoresParser.EQQ) | (1 << compiladoresParser.NE) | (1 << compiladoresParser.LT) | (1 << compiladoresParser.GT) | (1 << compiladoresParser.LE) | (1 << compiladoresParser.GE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





